--- a/pages/en/faq/5-faq-accounts.html
+++ b/pages/en/faq/5-faq-accounts.html
@@ -19,7 +19,7 @@ sub: faq
 			<h3>What is the difference between a ChampionFX real account and an MT5 account</h3>
 				<div>
 					<p>A ChampionFX real account lets you trade binary options on our Champion Trader platform using real money.</p>
-					<p>Cent, Standard and STP accounts allow you to trade Forex, CFDs, and other markets on our MT5 trading platform using real money.</p>
+					<p>ChampionFX offers three types of MT5 accounts: Cent, Standard, and STP. Each MT5 account allows you to trade Forex, CFDs, and other markets on our MT5 trading platform using real money.</p>
 				</div>
 			<h3>What base currency can I use to open an account with ChampionFX?</h3>
 				<div>
@@ -69,8 +69,17 @@ sub: faq
 				</div>
 			<h3>How do I open a live account?</h3>
 				<div>
-					<p>For Champion Trader, you’ll need to create a Champion Trader virtual account first before upgrading to a real account.</p>
-					<p>For MT5 you can open a Real Cent, Standard, or STP account, without being necessary to open a demo account.</p>
+					<p>For our Champion Trader platform:</p>
+					<ul class="bullet">
+						<li>Create a ChampionFX virtual account</li>
+						<li>Upgrade to a ChampionFX real (live) account</li>
+					</ul>
+					<p>For our MT5 platform:</p>
+					<ul class="bullet">
+						<li>Create a ChampionFX real account</li>
+						<li>Upgrade to an MT5 real account –– whether it’s Cent, Standard, or STP</li>
+					</ul>
+					<p>Please note that an MT5 demo account is not required to create an MT5 real account.</p>
 				</div>
 			<h3>What documents do I need to open a live account?</h3>
 				<div>
@@ -86,7 +95,7 @@ sub: faq
 				</div>
 			<h3>What is the minimum deposit requirement for each account type?</h3>
 				<div>
-					<p>At ChampionFX –– where the client is king –– there are no minimum deposit requirements and no commissions per trade for MT5 accounts and only as little as $5 Deposit for Binary Account. We are committed to providing you with a unique opportunity in the world of Forex trading, whether you’re a veteran trader or beginner.</p>
+					<p>At ChampionFX –– where the client is king –– there are no minimum deposit requirements and no commissions per trade for MT5 accounts, and as little as USD 5 per deposit for your Champion Trader account. We are committed to providing you with a unique opportunity in the world of Forex trading, whether you’re a veteran trader or beginner.</p>
 				</div>
 			<h3>Do you charge any commission on any of your accounts?</h3>
 				<div>
@@ -154,7 +163,8 @@ sub: faq
 				</div> 
 			<h3>Is there a minimum deposit amount?</h3>
 				<div>
-					<p>Minimum deposits range from USD 5 to USD 10, depending on the payment method you use.</p>		
+					<p>Minimum deposits for our Champion Trader platform range from USD 5 to USD 10, depending on the payment method you use.</p>
+					<p>There are no minimum deposit requirements for our MT5 platform.</p>
 				</div>
 			<h3>Do my deposit and withdrawal methods have to be similar?</h3>
 				<div>
