--- a/pages/en/faq-test.html
+++ b/pages/en/faq-test.html
@@ -56,7 +56,7 @@ sub: faq
 	<div class="col-md-3 fx-faq-toolbox">
 		<a href="http://support.champion-fx.com">
 		<div class="fx-panel-item fill-bg-color">
-			<div class="fx-sm fx-customer-service"></div>
+			<div class="fx-sm fx-support-question"></div>
 			<div>Post a Public Question</div>
 		</div>
 		</a>
@@ -64,7 +64,7 @@ sub: faq
 	<div class="col-md-3 fx-faq-toolbox">
 		<a href="http://support.champion-fx.com/customer/portal/emails/new">
 		<div class="fx-panel-item fill-bg-color">
-			<div class="fx-sm fx-customer-service"></div>
+			<div class="fx-sm fx-support-email"></div>
 			<div>Email Our Support Team</div>
 		</div>
 		</a>
@@ -80,7 +80,7 @@ sub: faq
 	<div class="col-md-3 fx-faq-toolbox">
 		<a href="http://support.champion-fx.com/customer/portal/chats/new">
 		<div class="fx-panel-item fill-bg-color">
-			<div class="fx-sm fx-customer-service"></div>
+			<div class="fx-sm fx-support-chat"></div>
 			<div>Start Live Chat Support</div>
 		</div>
 		</a>
