--- a/pages/en/8-faq.html
+++ b/pages/en/8-faq.html
@@ -6,7 +6,8 @@ language: en
 tag: main
 sub: faq
 ---
-<p>This FAQ is a work in progress and we will be constantly updating it to make it as helpful as possible. We hope you enjoy!</p>
+<p>ChampionFX is committed to delivering industry-leading resources to help you develop your trading skills, including this in-depth FAQ on our products and services.</p>
+<p>Our client-centric approach stems from the belief that customer service is not just a department, but it is the entire company.</p>
 <div class="separator-lg"></div>
 <div class="row center-text">
 	<div class="col-sm">	
