--- a/pages/en/8-faq.html
+++ b/pages/en/8-faq.html
@@ -47,9 +47,10 @@ sub: faq
 </div>
 <div class="separator fill-bg-color"></div>
 <div class="row center-text">
-	<div class="col-sm">	
-		<h2>Can’t find the answers you need in our FAQ?</h2>
-		<p>If the question you have is not covered here yet, please post a public question, contact us via email, Call us or Start Live Chat Support.</p>
+	<div class="col-sm">		
+		<h2>Can’t find the answers you need in our FAQ?</h2>		
+		<p>If the question you have is not covered here yet, contact us by using any of the channels below for help.</p>
+		<p>At ChampionFX, we aim to provide you with the world’s best customer experience.</p>
 	</div>	
 </div>
 <div class="separator-lg"></div>
@@ -63,18 +64,18 @@ sub: faq
 		</a>
 	</div>
 	<div class="col-md-3 fx-faq-toolbox">
-		<a href="http://support.champion-fx.com/customer/portal/emails/new">
+		<a href="https://www.champion-fx.com/en/contact.html">
 		<div class="fx-panel-item fill-bg-color">
 			<div class="fx-sm fx-support-email"></div>
-			<div>Email Our Support Team</div>
+			<div>Email us</div>
 		</div>
 		</a>
 	</div>
 	<div class="col-md-3 fx-faq-toolbox">
-		<a href="tel:888.555.1212">
+		<a href="https://www.champion-fx.com/en/contact.html">
 		<div class="fx-panel-item fill-bg-color">
-			<div class="fx-sm fx-customer-service"></div>
-			<div>Call Us @ 888.555.1212</div>
+			<div class="fx-sm fx-support-phone"></div>
+			<div>Call Us</div>
 		</div>
 		</a>
 	</div>
@@ -82,7 +83,7 @@ sub: faq
 		<a href="http://support.champion-fx.com/customer/portal/chats/new">
 		<div class="fx-panel-item fill-bg-color">
 			<div class="fx-sm fx-support-chat"></div>
-			<div>Start Live Chat Support</div>
+			<div>Start Live Chat</div>
 		</div>
 		</a>
 	</div>
