--- a/pages/en/8-faq.html
+++ b/pages/en/8-faq.html
@@ -11,7 +11,7 @@ sub: faq
 <div class="separator-lg"></div>
 <div class="row center-text">
 	<div class="col-sm">	
-		<h2>Browse by Topic</h2>
+		<h2>Browse by Category</h2>
 	</div>	
 </div>
 <div class="separator-lg"></div>
