--- a/pages/en/5-ebooks.html
+++ b/pages/en/5-ebooks.html
@@ -1,6 +1,6 @@
 ---
 layout: full-width
-title: E-Books
+title: EBooks
 permalink: /en/ebooks/
 language: en
 tag: main
@@ -36,7 +36,7 @@ sub: ebooks
 			<a class="" href="{{ "/download/vince_ebook_2017_cfx.pdf" | relative_url }}"><h2>Trading the Forex Market</h2></a>
 			<div class="separator primary-color"></div>
 			<p class="secondary-color">Author: Vince Stanzione</p>
-			<p>Interested to trade the Forex markets more effectively? Discover tools, strategies, and tips to enable you to make better decisions when trading currency pairs.</p>		
+			<p>Interested in trading Forex more effectively? Discover tools, strategies, and tips to trade currency pairs using binary options on our Champion Trader platform.</p>		
 			<p><a class="button" href="{{ "/download/vince_ebook_2017_cfx.pdf" | relative_url }}"><span>Download</span></a></p>							
 		</div>
 	</div>
