--- a/pages/en/8-faq.html
+++ b/pages/en/8-faq.html
@@ -1,6 +1,6 @@
 ---
 layout: full-width
-title: F.A.Q.
+title: FAQ
 permalink: /en/faq/
 language: en
 tag: main
@@ -11,7 +11,7 @@ sub: faq
 <div class="separator-lg"></div>
 <div class="row center-text">
 	<div class="col-sm">	
-		<h2>Browse by Category</h2>
+		<h2>Browse by category</h2>
 	</div>	
 </div>
 <div class="separator-lg"></div>
@@ -27,15 +27,15 @@ sub: faq
 		<h3><a href="{{ "/en/faq-trading/" | relative_url }}">Trading</a></h3>
 		<div class="separator primary-color"></div>
 		<p><a href="{{ "/en/faq-trading/#general" | relative_url }}">General</a></p>
-		<p><a href="{{ "/en/faq-trading/#trading_conditions" | relative_url }}">Trading Conditions</a></p>
-		<p><a href="{{ "/en/faq-trading/#trading_instruments" | relative_url }}">Trading Instruments</a></p>
+		<p><a href="{{ "/en/faq-trading/#trading_conditions" | relative_url }}">Trading conditions</a></p>
+		<p><a href="{{ "/en/faq-trading/#trading_instruments" | relative_url }}">Trading instruments</a></p>
 	</div>
 	<div class="col-md">
 		<h3><a href="{{ "/en/faq-accounts/" | relative_url }}">Accounts</a></h3>
 		<div class="separator primary-color"></div>
 		<p><a href="{{ "/en/faq-accounts/#openining-account" | relative_url }}">Opening an account</a></p>
-		<p><a href="{{ "/en/faq-accounts/#live-accounts" | relative_url }}">Live Accounts</a></p>
-		<p><a href="{{ "/en/faq-accounts/#demo-accounts" | relative_url }}">Demo Accounts</a></p>
+		<p><a href="{{ "/en/faq-accounts/#live-accounts" | relative_url }}">Live accounts</a></p>
+		<p><a href="{{ "/en/faq-accounts/#demo-accounts" | relative_url }}">Demo accounts</a></p>
 		<p><a href="{{ "/en/faq-accounts/#deposits-withdrawals" | relative_url }}">Deposits and withdrawals</a></p>
 	</div>
 	<div class="col-md">
@@ -50,7 +50,7 @@ sub: faq
 	<div class="col-sm">		
 		<h2>Can’t find the answers you need in our FAQ?</h2>
 		<p>At ChampionFX, we aim to provide you with the world’s best customer experience.</p>
-		<p>If the question you have is not covered here yet, contact us by using any of the channels below for help.</p>		
+		<p>Contact us by using any of the channels below for help.</p>		
 	</div>	
 </div>
 <div class="separator-lg"></div>
