--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ language: en
 	<div class="col-sm">
 		<div class="center-text">
 			<h2>Got questions?</h2>
-			<p>Read our FAQ or contact us.</p>
+			<p>Read our <a href="{{ "/en/faq-trading/" | relative_url }}">FAQ</a> or <a href="https://www.champion-fx.com/en/contact.html">contact us</a>.</p>
 		</div>
 	</div>	
 </div>
