--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ language: en
 <div class="separator fill-bg-color"></div>
 <div class="row center-text">
 	<div class="col-md">
-		<h3>What’s new</h3>
+		<h3><a href="{{ "/en/" | relative_url }}">What’s new</a></h3>
 		<div class="separator primary-color"></div>
 		<p>Catch all the latest updates from the ChampionFX team on our official blog.</p>				
 	</div>
