--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ language: en
 		<p>Catch all the latest updates from the ChampionFX team on our official blog.</p>				
 	</div>
 	<div class="col-md">
-		<h3>Daily report</h3>
+		<h3><a href="{{ "/en/daily-report/" | relative_url }}">Daily report</a></h3>
 		<div class="separator primary-color"></div>
 		<p>Get daily market insights, brought to you by financial analyst and editor, Dave Evans.</p>				
 	</div>
