--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@ language: en
 		<p>Get daily market insights, brought to you by financial analyst and editor, Dave Evans.</p>				
 	</div>
 	<div class="col-md">
-		<h3>Videos</h3>
+		<h3><a href="{{ "/en/videos/" | relative_url }}">Videos</a></h3>
 		<div class="separator primary-color"></div>
 		<p>Enhance your trading skills and knowledge through tutorials, walkthroughs, and more.</p>				
 	</div>
 	<div class="col-md">
-		<h3>Contributors</h3>
+		<h3><a href="{{ "/en/contributors/" | relative_url }}">Contributors</a></h3>
 		<div class="separator primary-color"></div>
 		<p>Learn more about our contributors, including Vince Stanzione and Dave Evans.</p>				
 	</div>
@@ -37,22 +37,22 @@ language: en
 <div class="fx-divider"></div>
 <div class="row center-text">
 	<div class="col-md">
-		<h3>Ebooks</h3>
+		<h3><a href="{{ "/en/ebooks/" | relative_url }}">Ebooks</a></h3>
 		<div class="separator primary-color"></div>
 		<p>Download free ebooks and guides on Forex trading, financial market analysis, and more.</p>				
 	</div>
 	<div class="col-md">
-		<h3>Learning centre</h3>
+		<h3><a href="{{ "/en/learning-centre/" | relative_url }}">Learning centre</a></h3>
 		<div class="separator primary-color"></div>
 		<p>Learn how to be a better trader and take advantage of platform features.</p>				
 	</div>
 	<div class="col-md">
-		<h3>Glossary</h3>
+		<h3><a href="{{ "en/glossary/" | relative_url }}">Glossary</a></h3>
 		<div class="separator primary-color"></div>
 		<p>Not sure what a certain trading term means? Find a simple explanation here.</p>				
 	</div>
 	<div class="col-md">
-		<h3>FAQ</h3>
+		<h3><a href="{{ "en/faq/" | relative_url }}">FAQ</a></h3>
 		<div class="separator primary-color"></div>
 		<p>Get answers to your most pressing questions from the markets, to platforms, and more.</p>				
 	</div>
