--- a/pages/en/8-faq.html
+++ b/pages/en/8-faq.html
@@ -59,7 +59,7 @@ sub: faq
 		<a href="http://support.champion-fx.com">
 		<div class="fx-panel-item fill-bg-color">
 			<div class="fx-sm fx-support-question"></div>
-			<div>Post a Public Question</div>
+			<div>Post a public Question</div>
 		</div>
 		</a>
 	</div>
@@ -75,7 +75,7 @@ sub: faq
 		<a href="https://www.champion-fx.com/en/contact.html">
 		<div class="fx-panel-item fill-bg-color">
 			<div class="fx-sm fx-support-phone"></div>
-			<div>Call Us</div>
+			<div>Call us</div>
 		</div>
 		</a>
 	</div>
@@ -83,7 +83,7 @@ sub: faq
 		<a href="http://support.champion-fx.com/customer/portal/chats/new">
 		<div class="fx-panel-item fill-bg-color">
 			<div class="fx-sm fx-support-chat"></div>
-			<div>Start Live Chat</div>
+			<div>Start live chat</div>
 		</div>
 		</a>
 	</div>
