--- a/pages/en/8-faq.html
+++ b/pages/en/8-faq.html
@@ -59,7 +59,7 @@ sub: faq
 		<a href="http://support.champion-fx.com">
 		<div class="fx-panel-item fill-bg-color">
 			<div class="fx-sm fx-support-question"></div>
-			<div>Post a public Question</div>
+			<div>Post a public question</div>
 		</div>
 		</a>
 	</div>
