--- a/pages/en/faq/2-faq-platforms.html
+++ b/pages/en/faq/2-faq-platforms.html
@@ -109,7 +109,7 @@ sub: faq
 				</div>
 			<h3>What is copy trading?</h3>
 				<div>
-					<p>Copy trading is an innovative feature that allows you to subscribe to ‘trading signals’ that are provided by more experienced brokers so that you may copy their trades.</p>
+					<p>Copy trading is an innovative feature that allows you to subscribe to ‘trading signals’ that are provided by more experienced traders so that you may copy their trades.</p>
 				</div>	
 			<h3>Can anyone use MT5?</h3>
 				<div>
