--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 language: en
 ---
-<div class="separator fill-bg-color"></div>
+<div class="separator"></div>
 <div class="row center-text">
 	<div class="col-md">
 		<h3><a href="{{ "/en/" | relative_url }}">What’s new</a></h3>
