--- a/pages/en/3-videos.html
+++ b/pages/en/3-videos.html
@@ -8,7 +8,7 @@ sub: videos
 ---
 <p>Enhance your trading skills and knowledge through our library of video tutorials, walkthroughs, and more.</p>
 <div class="video-container">
-    <iframe src="//www.youtube.com/embed/uTxJcFymyRE" allowfullscreen></iframe>	
+    <iframe src="//www.youtube.com/embed/at9u_9op2lQ" allowfullscreen></iframe>	
 </div>
 <p class="p--action"><a class="button" href="https://www.champion-fx.com/en/home.html#signup"><span>Get started, Try it now!</span></a></p>
 <h1>Archive</h1>
