--- a/pages/en/5-ebooks.html
+++ b/pages/en/5-ebooks.html
@@ -6,6 +6,7 @@ language: en
 tag: main
 sub: ebooks
 ---
+{{ page.url }}
 <p>Learn more about Forex, financial market analysis, trading strategies, and more with exclusive content by experienced traders and analysts.</p>
 <h3>Free ebooks and guides</h3>
 <div class="separator fill-bg-color"></div>
