--- a/pages/en/5-ebooks.html
+++ b/pages/en/5-ebooks.html
@@ -1,12 +1,11 @@
 ---
 layout: full-width
 title: Ebooks
-permalink: en/ebooks/
+permalink: /en/ebooks/
 language: en
 tag: main
 sub: ebooks
 ---
-{{ page.url }}
 <p>Learn more about Forex, financial market analysis, trading strategies, and more with exclusive content by experienced traders and analysts.</p>
 <h3>Free ebooks and guides</h3>
 <div class="separator fill-bg-color"></div>
